[package]
name = "insert_only_string_hash_map"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fnv = "1.0.7"

[profile.bench]
codegen-units = 1
debug = true