[package]
name = "compare_allocations"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = "0.2.1"
fnv = "1.0.7"
inohashmap = { path = "../" }
tantivity_term_map = { path = "../tantivity_term_map" }
